# muqabalah

./: CHANGELOG.md  FAILURES.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
muqabalah/: __init__.py  cli.py  core.py  detectors.py
tests/: test_core.py  test_property.py
