[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "muqabalah"
version = "0.1.0"
description = "Reversible cancellation and normalization with audit trails; fail-loud on contradiction"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Moshe-ship" }]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
muqabalah = "muqabalah.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["muqabalah*"]
