[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "muqabalah"
version = "0.1.0"
description = "Reversible cancellation and normalization with audit trails; fail-loud on contradiction"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Moshe-ship" }]
requires-python = ">=3.10"
dependencies = []

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
[project.urls]
Source = "https://github.com/Moshe-ship/muqabalah"
Issues = "https://github.com/Moshe-ship/muqabalah/issues"

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
muqabalah = "muqabalah.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["muqabalah*"]
